--- a/CalWebApi.csproj
+++ b/CalWebApi.csproj
@@ -25,6 +25,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="Database\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
 
 </Project>
